update: embed and namelist expansion, testing improvements

--- a/link_audit/testing.ipynb
+++ b/link_audit/testing.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bf86babb",
+   "metadata": {},
+   "source": [
+    "# Link audit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2108c855",
+   "metadata": {},
+   "source": [
+    "## Load requisites and data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "068539cf",
@@ -10,8 +26,20 @@
     "import re\n",
     "import sys\n",
     "import time\n",
+    "import requests\n",
+    "import subprocess\n",
+    "import pandas as pd\n",
+    "import ipywidgets as widgets\n",
     "from pathlib import Path\n",
     "from urllib.parse import urlparse\n",
+    "from IPython.display import display, HTML, Image\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "from tqdm.auto import tqdm\n",
+    "from requests.adapters import HTTPAdapter\n",
+    "from urllib3.util.retry import Retry\n",
+    "from bs4 import BeautifulSoup\n",
+    "from playwright.async_api import async_playwright\n",
+    "\n",
     "\n",
     "# Auto-install minimal deps if missing\n",
     "def ensure(pkg):\n",
@@ -31,9 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ipywidgets as w\n",
-    "from IPython.display import display\n",
-    "display(w.Button(description=\"Widgets OK\"))"
+    "display(widgets.Button(description=\"Widgets OK\"))"
    ]
   },
   {
@@ -43,11 +69,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
-    "import pandas as pd\n",
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display, HTML, IFrame\n",
-    "\n",
     "def find_repo_root(start: Path) -> Path:\n",
     "    for p in [start, *start.parents]:\n",
     "        if (p / \"tab\" / \"app.js\").exists():\n",
@@ -106,18 +127,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ff4b565",
+   "metadata": {},
+   "source": [
+    "## Audit broken links, duplicates and mismatches"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "28ca41ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-    "from tqdm.auto import tqdm\n",
-    "from requests.adapters import HTTPAdapter\n",
-    "from urllib3.util.retry import Retry\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
     "MAX_WORKERS = 30      # was 10\n",
     "TIMEOUT = 5           # was 10\n",
     "\n",
@@ -241,12 +264,60 @@
    "outputs": [],
    "source": [
     "COLUMBIDAE_GENERA = {\n",
-    "    \"Alectroenas\",\"Alopecoenas\",\"Pampusana\",\"Caloenas\",\"Chalcophaps\",\"Claravis\",\"Paraclaravis\",\n",
-    "    \"Columbina\",\"Columba\",\"Didunculus\",\"Drepanoptila\",\"Ducula\",\"Ectopistes\",\"Gallicolumba\", \"Geophaps\",\"Geopelia\",\n",
-    "    \"Geotrygon\",\"Zentrygon\",\"Goura\",\"Gymnophaps\",\"Hemiphaga\",\"Henicophaps\",\"Leptotila\",\"Leucosarcia\",\n",
-    "    \"Lopholaimus\",\"Macropygia\",\"Metriopelia\",\"Microgoura\",\"Nesoenas\",\"Ocyphaps\",\"Oena\",\"Otidiphaps\",\n",
-    "    \"Patagioenas\",\"Pezophaps\",\"Phapitreron\",\"Phaps\",\"Ptilinopus\",\"Reinwardtoena\",\"Raphus\",\"Spilopelia\",\n",
-    "    \"Streptopelia\",\"Starnoenas\",\"Treron\",\"Trugon\",\"Turtur\",\"Uropelia\",\"Zenaida\",\"Petrophassa\"\n",
+    "    'Alectroenas',\n",
+    "    'Aplopelia',\n",
+    "    'Caloenas',\n",
+    "    'Chalcophaps',\n",
+    "    'Claravis',\n",
+    "    'Columba',\n",
+    "    'Columbidae',\n",
+    "    'Columbina',\n",
+    "    'Cryptophaps',\n",
+    "    'Didunculus',\n",
+    "    'Ducula',\n",
+    "    'Ectopistes',\n",
+    "    'Gallicolumba',\n",
+    "    'Geopelia',\n",
+    "    'Geophaps',\n",
+    "    'Geotrygon',\n",
+    "    'Geotrygon/Leptotrygon/Zentrygon',\n",
+    "    'Goura',\n",
+    "    'Gymnophaps',\n",
+    "    'Hemiphaga',\n",
+    "    'Henicophaps',\n",
+    "    'Leptotila',\n",
+    "    'Leptotrygon',\n",
+    "    'Leucosarcia',\n",
+    "    'Lopholaimus',\n",
+    "    'Macropygia',\n",
+    "    'Megaloprepia',\n",
+    "    'Metriopelia',\n",
+    "    'Microgoura',\n",
+    "    'Nesoenas',\n",
+    "    'Ocyphaps',\n",
+    "    'Oena',\n",
+    "    'Otidiphaps',\n",
+    "    'Pampusana',\n",
+    "    'Paraclaravis',\n",
+    "    'Patagioenas',\n",
+    "    'Petrophassa',\n",
+    "    'Pezophaps',\n",
+    "    'Phapitreron',\n",
+    "    'Phaps',\n",
+    "    'Ptilinopus',\n",
+    "    'Ramphiculus',\n",
+    "    'Raphus',\n",
+    "    'Reinwardtoena',\n",
+    "    'Spilopelia',\n",
+    "    'Starnoenas',\n",
+    "    'Streptopelia',\n",
+    "    'Treron',\n",
+    "    'Trugon',\n",
+    "    'Turacoena',\n",
+    "    'Turtur',\n",
+    "    'Uropelia',\n",
+    "    'Zenaida',\n",
+    "    'Zentrygon'\n",
     "}\n",
     "\n",
     "# first token of species_name is the genus\n",
@@ -256,7 +327,6 @@
     "df[\"family_mismatch\"] = df[\"species_name\"].notna() & ~df[\"is_columbidae_genus\"]\n",
     "\n",
     "df_sorted = df.sort_values(by=[\"ok\", \"suspicious\", \"status_code\"], ascending=[True, False, True])\n",
-    "display(df_sorted.head(20))\n",
     "print(f\"OK: {df['ok'].sum()} | Broken: {(~df['ok']).sum()} | With errors: {df['error'].notna().sum()}\")"
    ]
   },
@@ -267,9 +337,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUT_CSV = Path(APP_JS).parent.parent / \"link_audit.csv\"\n",
+    "out_dir = REPO_ROOT / \"link_audit\"\n",
+    "out_dir.mkdir(parents=True, exist_ok=True)\n",
+    "OUT_CSV = out_dir / \"_link_audit.csv\"\n",
     "df_sorted.to_csv(OUT_CSV, index=False)\n",
     "print(f\"Saved: {OUT_CSV}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subprocess.run([sys.executable, \"-m\", \"pip\", \"install\", \"playwright\"], check=True)\n",
+    "subprocess.run([sys.executable, \"-m\", \"playwright\", \"install\", \"chromium\"], check=True)\n",
+    "\n",
+    "async def grab_embed_png_async(url, w=900, h=540, timeout_ms=15000):\n",
+    "    async with async_playwright() as p:\n",
+    "        browser = await p.chromium.launch()\n",
+    "        page = await browser.new_page(viewport={\"width\": w, \"height\": h})\n",
+    "        await page.goto(url, wait_until=\"networkidle\", timeout=timeout_ms)\n",
+    "        png = await page.screenshot(full_page=False)\n",
+    "        await browser.close()\n",
+    "        return png\n",
+    "\n",
+    "def screenshot_embed(url, w=900, h=540, timeout_ms=15000):\n",
+    "    # Run Playwright in a separate thread with a Proactor loop (required for subprocess on Windows)\n",
+    "    import threading, asyncio, sys\n",
+    "    result = {\"png\": None, \"err\": None}\n",
+    "    def runner():\n",
+    "        try:\n",
+    "            if sys.platform.startswith(\"win\"):\n",
+    "                asyncio.set_event_loop_policy(asyncio.WindowsProactorEventLoopPolicy())\n",
+    "            loop = asyncio.new_event_loop()\n",
+    "            asyncio.set_event_loop(loop)\n",
+    "            result[\"png\"] = loop.run_until_complete(grab_embed_png_async(url, w, h, timeout_ms))\n",
+    "        except Exception as e:\n",
+    "            result[\"err\"] = e\n",
+    "        finally:\n",
+    "            try:\n",
+    "                loop.close()\n",
+    "            except:\n",
+    "                pass\n",
+    "    t = threading.Thread(target=runner, daemon=True)\n",
+    "    t.start()\n",
+    "    t.join()\n",
+    "    if result[\"err\"]:\n",
+    "        raise result[\"err\"]\n",
+    "    return result[\"png\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cb47019",
+   "metadata": {},
+   "source": [
+    "## Quick previewer using Playwright for screenshots"
    ]
   },
   {
@@ -288,10 +412,15 @@
     "        return df.index[df[\"suspicious\"]].tolist()\n",
     "    if mode == \"duplicates\":\n",
     "        return df.index[df[\"duplicate\"]].tolist()\n",
+    "    if mode == \"wrong family\":\n",
+    "        return df.index[df[\"family_mismatch\"]].tolist()\n",
     "    return all_indices\n",
     "\n",
-    "mode = widgets.ToggleButtons(options=[\"all\", \"broken\", \"suspicious\", \"duplicates\"], description=\"View:\")\n",
-    "show_iframe = widgets.Checkbox(value=True, description=\"Preview iframe\")\n",
+    "_shot_cache: dict[str, bytes] = {}\n",
+    "\n",
+    "mode = widgets.ToggleButtons(options=[\"all\", \"broken\", \"duplicates\", \"wrong family\"], description=\"View:\")\n",
+    "# show_iframe = widgets.Checkbox(value=False, description=\"Preview iframe\")\n",
+    "show_shot = widgets.Checkbox(value=False, description=\"Preview screenshot\")\n",
     "i_slider = widgets.IntSlider(value=0, min=0, max=max(0, len(all_indices)-1), description=\"Index\")\n",
     "prev_btn = widgets.Button(description=\"Prev\")\n",
     "next_btn = widgets.Button(description=\"Next\")\n",
@@ -331,22 +460,33 @@
     "    \"\"\"\n",
     "    with out:\n",
     "        display(HTML(html))\n",
-    "        if show_iframe.value:\n",
+    "        # if show_iframe.value:\n",
+    "        #     try:\n",
+    "        #         iframe_html = f\"\"\"\n",
+    "        #         <iframe\n",
+    "        #             sandbox=\"allow-scripts allow-same-origin\"\n",
+    "        #             src=\"{row['url']}\"\n",
+    "        #             width=\"900\"\n",
+    "        #             height=\"540\">\n",
+    "        #         </iframe>\n",
+    "        #         \"\"\"\n",
+    "        #         display(HTML(iframe_html))\n",
+    "        #     except Exception as e:\n",
+    "        #         display(HTML(f\"<i>Preview failed: {e}</i>\"))\n",
+    "\n",
+    "        if show_shot.value:\n",
     "            try:\n",
-    "                iframe_html = f\"\"\"\n",
-    "                <iframe\n",
-    "                    src=\"{row['url']}\"\n",
-    "                    width=\"900\"\n",
-    "                    height=\"540\"\n",
-    "                    style=\"border:0\"\n",
-    "                    loading=\"lazy\"\n",
-    "                    allow=\"autoplay; fullscreen; clipboard-write\"\n",
-    "                    sandbox=\"allow-scripts allow-same-origin allow-popups allow-forms\">\n",
-    "                </iframe>\n",
-    "                \"\"\"\n",
-    "                display(HTML(iframe_html))\n",
+    "                url = row[\"url\"]\n",
+    "                png = _shot_cache.get(url)\n",
+    "                if png is None:\n",
+    "                    # requires the Playwright helper cell to have been run\n",
+    "                    png = screenshot_embed(url, 900, 540, 15000)\n",
+    "                    _shot_cache[url] = png\n",
+    "                display(Image(png))\n",
+    "            except NameError:\n",
+    "                display(HTML(\"<i>Screenshot preview requires the Playwright cell to be run first.</i>\"))\n",
     "            except Exception as e:\n",
-    "                display(HTML(f\"<i>Preview failed: {e}</i>\"))\n",
+    "                display(HTML(f\"<i>Screenshot failed: {e}</i>\"))\n",
     "\n",
     "def on_mode_change(change):\n",
     "    state[\"indices\"] = subset_indices(change[\"new\"])\n",
@@ -362,15 +502,25 @@
     "        i_slider.value += 1\n",
     "\n",
     "mode.observe(on_mode_change, names=\"value\")\n",
-    "show_iframe.observe(lambda ch: render(), names=\"value\")\n",
+    "# show_iframe.observe(lambda ch: render(), names=\"value\")\n",
+    "show_shot.observe(lambda ch: render(), names=\"value\")  # NEW\n",
     "prev_btn.on_click(on_prev)\n",
     "next_btn.on_click(on_next)\n",
     "i_slider.observe(lambda ch: render(), names=\"value\")\n",
     "\n",
-    "controls = widgets.HBox([mode, show_iframe, prev_btn, next_btn, i_slider])\n",
+    "controls = widgets.HBox([mode, show_shot, prev_btn, next_btn, i_slider])  # add checkbox\n",
     "display(controls, out)\n",
     "\n",
     "render()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416d5a3f",
+   "metadata": {},
+   "source": [
+    "## Generate gallery html with IFrames\n",
+    "Categorised by issue"
    ]
   },
   {
@@ -418,9 +568,9 @@
     "    sections.append(f\"<h2 id='mismatch'>🚫 Not Columbidae ({len(family_mismatch)})</h2>\")\n",
     "    sections.append('<div class=\"section\">'+'\\n'.join(make_card(r) for _, r in family_mismatch.iterrows())+'</div>')\n",
     "\n",
-    "if len(suspicious) > 0:\n",
-    "    sections.append(f\"<h2 id='suspicious'>⚠️ Suspicious ({len(suspicious)})</h2>\")\n",
-    "    sections.append('<div class=\"section\">'+'\\n'.join(make_card(r) for _, r in suspicious.iterrows())+'</div>')\n",
+    "# if len(suspicious) > 0:\n",
+    "#     sections.append(f\"<h2 id='suspicious'>⚠️ Suspicious ({len(suspicious)})</h2>\")\n",
+    "#     sections.append('<div class=\"section\">'+'\\n'.join(make_card(r) for _, r in suspicious.iterrows())+'</div>')\n",
     "\n",
     "if len(duplicates) > 0:\n",
     "    sections.append(f\"<h2 id='duplicates'>🔁 Duplicates ({len(duplicates)})</h2>\")\n",
@@ -487,6 +637,65 @@
     "webbrowser.open(out_file.as_uri())\n",
     "print(f\"Categorized gallery: {out_file}\")\n",
     "print(f\"Broken: {len(broken)} | Non-Columbidae: {len(family_mismatch)} | Suspicious: {len(suspicious)} | Duplicates: {len(duplicates)} | OK: {len(ok_links)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d77b5b8",
+   "metadata": {},
+   "source": [
+    "## Get asset IDs for issues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# display asset IDs for duplicates, broken and family mismatches\n",
+    "# widget with asset ID, url, species name and a button to copy the asset ID to clipboard\n",
+    "\n",
+    "from IPython.display import display\n",
+    "import ipywidgets as widgets\n",
+    "\n",
+    "\n",
+    "def display_asset_ids(df_subset, issue_label):\n",
+    "    for _, row in df_subset.iterrows():\n",
+    "        asset_id = row['asset_id'] or '(none)'\n",
+    "        url = row['url']\n",
+    "        species_name = row['species_name'] or '(unknown)'\n",
+    "\n",
+    "        btn = widgets.Button(description=\"Copy Asset ID\", layout=widgets.Layout(width='120px'))\n",
+    "        output = widgets.Output()\n",
+    "\n",
+    "        def on_copy_clicked(b, aid=asset_id):\n",
+    "            output.clear_output()\n",
+    "            if aid != '(none)':\n",
+    "                import pyperclip\n",
+    "                pyperclip.copy(aid)\n",
+    "                with output:\n",
+    "                    print(f\"Copied Asset ID: {aid}\")\n",
+    "            else:\n",
+    "                with output:\n",
+    "                    print(\"No Asset ID to copy.\")\n",
+    "\n",
+    "        btn.on_click(on_copy_clicked)\n",
+    "\n",
+    "        box = widgets.VBox([\n",
+    "            widgets.HTML(f\"<b>Issue:</b> {issue_label} <br> <b>Asset ID:</b> {asset_id} <b>Species:</b> {species_name} <b>URL:</b> <a href='{url}' target='_blank'>{url}</a>\"),\n",
+    "            btn,\n",
+    "            output\n",
+    "        ])\n",
+    "\n",
+    "        display(box)\n",
+    "\n",
+    "for label, dfset in [\n",
+    "    (\"Duplicate\", duplicates),\n",
+    "    (\"Broken URL\", broken),\n",
+    "    (\"Not Columbidae\", family_mismatch),\n",
+    "    ]:\n",
+    "    display_asset_ids(dfset, label)"
    ]
   }
  ],
